#9 Updated more NSE* classes and enums Navigation, EventHandlerType, ExecuteOnEvent, ShowState

--- a/docs/api-reference/CRMScript.Global.Void.yml
+++ b/docs/api-reference/CRMScript.Global.Void.yml
@@ -354,6 +354,8 @@ It will throw an AssertException if &quot;condition&quot; is false. The exceptio
   syntax: 
     content: cgiWasPost()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Global.Void.checkReply(String)
   commentId: M:CRMScript.Global.Void.checkReply(String)
@@ -855,6 +857,8 @@ It will throw an AssertException if &quot;condition&quot; is false. The exceptio
   syntax: 
     content: flushCaches()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Global.Void.forwardMail(String,String,Integer)
   commentId: M:CRMScript.Global.Void.forwardMail(String,String,Integer)
@@ -898,6 +902,8 @@ It will throw an AssertException if &quot;condition&quot; is false. The exceptio
   syntax: 
     content: getActiveUser()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Global.Void.getAgentId(String)
   commentId: M:CRMScript.Global.Void.getAgentId(String)
@@ -3307,6 +3313,8 @@ as long as a session lives. That is until a user logs out.\n"
   syntax: 
     content: Void SetFromCgi()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Global.Void.setGlobalVariable(String,String)
   commentId: M:CRMScript.Global.Void.setGlobalVariable(String,String)
