--- a/docs/api-reference/CRMScript.Native.AppointmentSlicer.yml
+++ b/docs/api-reference/CRMScript.Native.AppointmentSlicer.yml
@@ -78,6 +78,8 @@ items:
   syntax: 
     content: clear()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.AppointmentSlicer.eof()
   commentId: M:CRMScript.Native.AppointmentSlicer.eof()
