--- a/docs/api-reference/CRMScript.Native.Ticket.yml
+++ b/docs/api-reference/CRMScript.Native.Ticket.yml
@@ -128,6 +128,8 @@ items:
   syntax: 
     content: delegate()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.Ticket.delegate(Integer)
   commentId: M:CRMScript.Native.Ticket.delegate(Integer)
