--- a/docs/api-reference/CRMScript.NetServer.NSAAAMockAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAAAMockAgent.yml
@@ -193,6 +193,8 @@ items:
   syntax: 
     content: DoNada()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAAMockAgent.EnumInput(Integer)
   commentId: M:CRMScript.NetServer.NSAAAMockAgent.EnumInput(Integer)
@@ -251,6 +253,8 @@ items:
   syntax: 
     content: GetArrayOfBytes()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAAMockAgent.GetArrayOfDoubles()
   commentId: M:CRMScript.NetServer.NSAAAMockAgent.GetArrayOfDoubles()
@@ -267,6 +271,8 @@ items:
   syntax: 
     content: GetArrayOfDoubles()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAAMockAgent.GetArrayOfIntegers()
   commentId: M:CRMScript.NetServer.NSAAAMockAgent.GetArrayOfIntegers()
@@ -283,6 +289,8 @@ items:
   syntax: 
     content: GetArrayOfIntegers()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAAMockAgent.GetArrayOfQuoteLines()
   commentId: M:CRMScript.NetServer.NSAAAMockAgent.GetArrayOfQuoteLines()
@@ -299,6 +307,8 @@ items:
   syntax: 
     content: GetArrayOfQuoteLines()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAAMockAgent.GetArrayOfStrings()
   commentId: M:CRMScript.NetServer.NSAAAMockAgent.GetArrayOfStrings()
@@ -315,6 +325,8 @@ items:
   syntax: 
     content: GetArrayOfStrings()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAAMockAgent.GetBool()
   commentId: M:CRMScript.NetServer.NSAAAMockAgent.GetBool()
@@ -331,6 +343,8 @@ items:
   syntax: 
     content: GetBool()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAAMockAgent.GetDate()
   commentId: M:CRMScript.NetServer.NSAAAMockAgent.GetDate()
@@ -347,6 +361,8 @@ items:
   syntax: 
     content: GetDate()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAAMockAgent.GetDictionaryOfFieldMetadata()
   commentId: M:CRMScript.NetServer.NSAAAMockAgent.GetDictionaryOfFieldMetadata()
@@ -363,6 +379,8 @@ items:
   syntax: 
     content: GetDictionaryOfFieldMetadata()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAAMockAgent.GetDouble()
   commentId: M:CRMScript.NetServer.NSAAAMockAgent.GetDouble()
@@ -379,6 +397,8 @@ items:
   syntax: 
     content: GetDouble()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAAMockAgent.GetInteger()
   commentId: M:CRMScript.NetServer.NSAAAMockAgent.GetInteger()
@@ -395,6 +415,8 @@ items:
   syntax: 
     content: GetInteger()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAAMockAgent.GetQuoteLine()
   commentId: M:CRMScript.NetServer.NSAAAMockAgent.GetQuoteLine()
@@ -411,6 +433,8 @@ items:
   syntax: 
     content: GetQuoteLine()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAAMockAgent.GetSomeId()
   commentId: M:CRMScript.NetServer.NSAAAMockAgent.GetSomeId()
@@ -427,6 +451,8 @@ items:
   syntax: 
     content: GetSomeId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAAMockAgent.GetString()
   commentId: M:CRMScript.NetServer.NSAAAMockAgent.GetString()
@@ -443,6 +469,8 @@ items:
   syntax: 
     content: GetString()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAAMockAgent.InputId(Integer,Some)
   commentId: M:CRMScript.NetServer.NSAAAMockAgent.InputId(Integer,Some)
