--- a/docs/api-reference/CRMScript.NetServer.NSAAATestClassForModeling.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAAATestClassForModeling.yml
@@ -66,6 +66,8 @@ items:
   syntax: 
     content: GetArrayOfIds()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAATestClassForModeling.GetArrayOfQuoteLines()
   commentId: M:CRMScript.NetServer.NSAAATestClassForModeling.GetArrayOfQuoteLines()
@@ -82,6 +84,8 @@ items:
   syntax: 
     content: GetArrayOfQuoteLines()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAATestClassForModeling.GetArrayOfStrings()
   commentId: M:CRMScript.NetServer.NSAAATestClassForModeling.GetArrayOfStrings()
@@ -98,6 +102,8 @@ items:
   syntax: 
     content: GetArrayOfStrings()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAATestClassForModeling.GetDatabaseEnum()
   commentId: M:CRMScript.NetServer.NSAAATestClassForModeling.GetDatabaseEnum()
@@ -114,6 +120,8 @@ items:
   syntax: 
     content: GetDatabaseEnum()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAATestClassForModeling.GetDoubleAmount()
   commentId: M:CRMScript.NetServer.NSAAATestClassForModeling.GetDoubleAmount()
@@ -130,6 +138,8 @@ items:
   syntax: 
     content: GetDoubleAmount()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAATestClassForModeling.GetQuoteLine()
   commentId: M:CRMScript.NetServer.NSAAATestClassForModeling.GetQuoteLine()
@@ -146,6 +156,8 @@ items:
   syntax: 
     content: GetQuoteLine()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAATestClassForModeling.GetSaleDate()
   commentId: M:CRMScript.NetServer.NSAAATestClassForModeling.GetSaleDate()
@@ -162,6 +174,8 @@ items:
   syntax: 
     content: GetSaleDate()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAATestClassForModeling.GetSaleId()
   commentId: M:CRMScript.NetServer.NSAAATestClassForModeling.GetSaleId()
@@ -178,6 +192,8 @@ items:
   syntax: 
     content: GetSaleId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAATestClassForModeling.GetSomeEnum()
   commentId: M:CRMScript.NetServer.NSAAATestClassForModeling.GetSomeEnum()
@@ -194,6 +210,8 @@ items:
   syntax: 
     content: GetSomeEnum()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAATestClassForModeling.GetStandardBool()
   commentId: M:CRMScript.NetServer.NSAAATestClassForModeling.GetStandardBool()
@@ -210,6 +228,8 @@ items:
   syntax: 
     content: GetStandardBool()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAATestClassForModeling.GetStandardDate()
   commentId: M:CRMScript.NetServer.NSAAATestClassForModeling.GetStandardDate()
@@ -226,6 +246,8 @@ items:
   syntax: 
     content: GetStandardDate()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAATestClassForModeling.GetStandardDouble()
   commentId: M:CRMScript.NetServer.NSAAATestClassForModeling.GetStandardDouble()
@@ -242,6 +264,8 @@ items:
   syntax: 
     content: GetStandardDouble()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAATestClassForModeling.GetStandardId()
   commentId: M:CRMScript.NetServer.NSAAATestClassForModeling.GetStandardId()
@@ -258,6 +282,8 @@ items:
   syntax: 
     content: GetStandardId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAATestClassForModeling.GetStandardInt()
   commentId: M:CRMScript.NetServer.NSAAATestClassForModeling.GetStandardInt()
@@ -274,6 +300,8 @@ items:
   syntax: 
     content: GetStandardInt()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAATestClassForModeling.GetStandardString()
   commentId: M:CRMScript.NetServer.NSAAATestClassForModeling.GetStandardString()
@@ -290,6 +318,8 @@ items:
   syntax: 
     content: GetStandardString()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAATestClassForModeling.GetStringCurrencyName()
   commentId: M:CRMScript.NetServer.NSAAATestClassForModeling.GetStringCurrencyName()
@@ -306,6 +336,8 @@ items:
   syntax: 
     content: GetStringCurrencyName()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAATestClassForModeling.GetStringDescription()
   commentId: M:CRMScript.NetServer.NSAAATestClassForModeling.GetStringDescription()
@@ -322,6 +354,8 @@ items:
   syntax: 
     content: GetStringDescription()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAATestClassForModeling.GetStringTitle()
   commentId: M:CRMScript.NetServer.NSAAATestClassForModeling.GetStringTitle()
@@ -338,6 +372,8 @@ items:
   syntax: 
     content: GetStringTitle()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAATestClassForModeling.GetUshortProbability()
   commentId: M:CRMScript.NetServer.NSAAATestClassForModeling.GetUshortProbability()
@@ -354,6 +390,8 @@ items:
   syntax: 
     content: GetUshortProbability()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSAAATestClassForModeling.#ctor
   commentId: M:CRMScript.NetServer.NSAAATestClassForModeling.#ctor
