--- a/docs/api-reference/CRMScript.NetServer.NSBatchTaskInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBatchTaskInfo.yml
@@ -717,6 +717,8 @@ items:
   syntax: 
     content: Void SetParameterObject()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSBatchTaskInfo thing;\nMap parameterObject;\nthing.SetParameterObject(parameterObject);</code></pre>\n"
 - uid: CRMScript.NetServer.NSBatchTaskInfo.SetProgressDescription(String)
