--- a/docs/api-reference/CRMScript.NetServer.NSDSAParameters.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDSAParameters.yml
@@ -77,6 +77,8 @@ items:
   syntax: 
     content: GetG()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSDSAParameters.GetJ()
   commentId: M:CRMScript.NetServer.NSDSAParameters.GetJ()
@@ -93,6 +95,8 @@ items:
   syntax: 
     content: GetJ()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSDSAParameters.GetP()
   commentId: M:CRMScript.NetServer.NSDSAParameters.GetP()
@@ -109,6 +113,8 @@ items:
   syntax: 
     content: GetP()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSDSAParameters.GetQ()
   commentId: M:CRMScript.NetServer.NSDSAParameters.GetQ()
@@ -125,6 +131,8 @@ items:
   syntax: 
     content: GetQ()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSDSAParameters.GetSeed()
   commentId: M:CRMScript.NetServer.NSDSAParameters.GetSeed()
@@ -141,6 +149,8 @@ items:
   syntax: 
     content: GetSeed()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSDSAParameters.GetY()
   commentId: M:CRMScript.NetServer.NSDSAParameters.GetY()
@@ -157,6 +167,8 @@ items:
   syntax: 
     content: GetY()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSDSAParameters.SetCounter(Integer)
   commentId: M:CRMScript.NetServer.NSDSAParameters.SetCounter(Integer)
