--- a/docs/api-reference/CRMScript.NetServer.NSDocumentTemplateEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentTemplateEntity.yml
@@ -634,6 +634,8 @@ items:
   syntax: 
     content: Void SetDirection()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSDocumentTemplateEntity thing;\nNSDocTmplDirection direction;\nthing.SetDirection(direction);</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocumentTemplateEntity.SetDocumentTemplateId(Integer)
