--- a/docs/api-reference/CRMScript.NetServer.NSEntityElement.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSEntityElement.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSEntityElement.#ctor
   - CRMScript.NetServer.NSEntityElement.GetDescription()
   - CRMScript.NetServer.NSEntityElement.GetStrippedValue()
   - CRMScript.NetServer.NSEntityElement.GetValue()
-  - CRMScript.NetServer.NSEntityElement.#ctor
   - CRMScript.NetServer.NSEntityElement.SetDescription(String)
   - CRMScript.NetServer.NSEntityElement.SetStrippedValue(String)
   - CRMScript.NetServer.NSEntityElement.SetValue(String)
@@ -18,54 +18,6 @@ items:
   fullName: CRMScript.NetServer.NSEntityElement
   type: Class
   summary: 
-  example: 
-- uid: CRMScript.NetServer.NSEntityElement.GetDescription()
-  commentId: M:CRMScript.NetServer.NSEntityElement.GetDescription()
-  id: 'GetDescription()'
-  so.intellisense: NSEntityElement.GetDescription
-  langs:
-  - crmscript
-  name: 'GetDescription()'
-  nameWithType: NSEntityElement.GetDescription()
-  fullName: CRMScript.NetServer.NSEntityElement.GetDescription()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetDescription()
-    parameters: []
-  example: 
-- uid: CRMScript.NetServer.NSEntityElement.GetStrippedValue()
-  commentId: M:CRMScript.NetServer.NSEntityElement.GetStrippedValue()
-  id: 'GetStrippedValue()'
-  so.intellisense: NSEntityElement.GetStrippedValue
-  langs:
-  - crmscript
-  name: 'GetStrippedValue()'
-  nameWithType: NSEntityElement.GetStrippedValue()
-  fullName: CRMScript.NetServer.NSEntityElement.GetStrippedValue()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetStrippedValue()
-    parameters: []
-  example: 
-- uid: CRMScript.NetServer.NSEntityElement.GetValue()
-  commentId: M:CRMScript.NetServer.NSEntityElement.GetValue()
-  id: 'GetValue()'
-  so.intellisense: NSEntityElement.GetValue
-  langs:
-  - crmscript
-  name: 'GetValue()'
-  nameWithType: NSEntityElement.GetValue()
-  fullName: CRMScript.NetServer.NSEntityElement.GetValue()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetValue()
-    parameters: []
   example: 
 - uid: CRMScript.NetServer.NSEntityElement.#ctor
   commentId: M:CRMScript.NetServer.NSEntityElement.#ctor
@@ -82,6 +34,60 @@ items:
   syntax: 
     content: NSEntityElement
   example: 
+- uid: CRMScript.NetServer.NSEntityElement.GetDescription()
+  commentId: M:CRMScript.NetServer.NSEntityElement.GetDescription()
+  id: 'GetDescription()'
+  so.intellisense: NSEntityElement.GetDescription
+  langs:
+  - crmscript
+  name: 'GetDescription()'
+  nameWithType: NSEntityElement.GetDescription()
+  fullName: CRMScript.NetServer.NSEntityElement.GetDescription()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: GetDescription()
+    parameters: []
+    return:
+      type: CRMScript.Global.Void
+  example: 
+- uid: CRMScript.NetServer.NSEntityElement.GetStrippedValue()
+  commentId: M:CRMScript.NetServer.NSEntityElement.GetStrippedValue()
+  id: 'GetStrippedValue()'
+  so.intellisense: NSEntityElement.GetStrippedValue
+  langs:
+  - crmscript
+  name: 'GetStrippedValue()'
+  nameWithType: NSEntityElement.GetStrippedValue()
+  fullName: CRMScript.NetServer.NSEntityElement.GetStrippedValue()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: GetStrippedValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.Void
+  example: 
+- uid: CRMScript.NetServer.NSEntityElement.GetValue()
+  commentId: M:CRMScript.NetServer.NSEntityElement.GetValue()
+  id: 'GetValue()'
+  so.intellisense: NSEntityElement.GetValue
+  langs:
+  - crmscript
+  name: 'GetValue()'
+  nameWithType: NSEntityElement.GetValue()
+  fullName: CRMScript.NetServer.NSEntityElement.GetValue()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: GetValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.Void
+  example: 
 - uid: CRMScript.NetServer.NSEntityElement.SetDescription(String)
   commentId: M:CRMScript.NetServer.NSEntityElement.SetDescription(String)
   id: 'SetDescription(String)'
@@ -95,9 +101,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetDescription(String p_0)
+    content: Void SetDescription(String description)
     parameters:
-    - id: p_0
+    - id: description
       type: CRMScript.Global.String
       description: 
     return:
@@ -116,9 +122,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetStrippedValue(String p_0)
+    content: Void SetStrippedValue(String value)
     parameters:
-    - id: p_0
+    - id: value
       type: CRMScript.Global.String
       description: 
     return:
@@ -137,9 +143,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetValue(String p_0)
+    content: Void SetValue(String value)
     parameters:
-    - id: p_0
+    - id: value
       type: CRMScript.Global.String
       description: 
     return:
