--- a/docs/api-reference/CRMScript.NetServer.NSEntityName.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSEntityName.yml
@@ -6,9 +6,9 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSEntityName.#ctor
   - CRMScript.NetServer.NSEntityName.GetTableDescription()
   - CRMScript.NetServer.NSEntityName.GetTableName()
-  - CRMScript.NetServer.NSEntityName.#ctor
   - CRMScript.NetServer.NSEntityName.SetTableDescription(String)
   - CRMScript.NetServer.NSEntityName.SetTableName(String)
   name: NSEntityName
@@ -17,44 +17,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSEntityName.GetTableDescription()
-  commentId: M:CRMScript.NetServer.NSEntityName.GetTableDescription()
-  id: 'GetTableDescription()'
-  so.intellisense: NSEntityName.GetTableDescription
-  langs:
-  - crmscript
-  name: 'GetTableDescription()'
-  nameWithType: NSEntityName.GetTableDescription()
-  fullName: CRMScript.NetServer.NSEntityName.GetTableDescription()
-  type: Method
-  summary: "\nName to be used in GUI, preferable a resource string\n"
-  remarks: 
-  syntax: 
-    content: String GetTableDescription()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSEntityName thing;\nString tableDescription = thing.GetTableDescription();</code></pre>\n"
-- uid: CRMScript.NetServer.NSEntityName.GetTableName()
-  commentId: M:CRMScript.NetServer.NSEntityName.GetTableName()
-  id: 'GetTableName()'
-  so.intellisense: NSEntityName.GetTableName
-  langs:
-  - crmscript
-  name: 'GetTableName()'
-  nameWithType: NSEntityName.GetTableName()
-  fullName: CRMScript.NetServer.NSEntityName.GetTableName()
-  type: Method
-  summary: "\nThe name of the table in the database\n"
-  remarks: 
-  syntax: 
-    content: String GetTableName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSEntityName thing;\nString tableName = thing.GetTableName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSEntityName.#ctor
   commentId: M:CRMScript.NetServer.NSEntityName.#ctor
   id: '#ctor'
@@ -70,6 +32,46 @@ items:
   syntax: 
     content: NSEntityName
   example: 
+- uid: CRMScript.NetServer.NSEntityName.GetTableDescription()
+  commentId: M:CRMScript.NetServer.NSEntityName.GetTableDescription()
+  id: 'GetTableDescription()'
+  so.intellisense: NSEntityName.GetTableDescription
+  langs:
+  - crmscript
+  name: 'GetTableDescription()'
+  nameWithType: NSEntityName.GetTableDescription()
+  fullName: CRMScript.NetServer.NSEntityName.GetTableDescription()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetTableDescription()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Name to be used in GUI, preferable a resource string
+  example: 
+  - "\n<pre><code>NSEntityName thing;\nString tableDescription = thing.GetTableDescription();</code></pre>\n"
+- uid: CRMScript.NetServer.NSEntityName.GetTableName()
+  commentId: M:CRMScript.NetServer.NSEntityName.GetTableName()
+  id: 'GetTableName()'
+  so.intellisense: NSEntityName.GetTableName
+  langs:
+  - crmscript
+  name: 'GetTableName()'
+  nameWithType: NSEntityName.GetTableName()
+  fullName: CRMScript.NetServer.NSEntityName.GetTableName()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetTableName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The name of the table in the database
+  example: 
+  - "\n<pre><code>NSEntityName thing;\nString tableName = thing.GetTableName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSEntityName.SetTableDescription(String)
   commentId: M:CRMScript.NetServer.NSEntityName.SetTableDescription(String)
   id: 'SetTableDescription(String)'
@@ -80,14 +82,14 @@ items:
   nameWithType: NSEntityName.SetTableDescription(String)
   fullName: CRMScript.NetServer.NSEntityName.SetTableDescription(String)
   type: Method
-  summary: "\nName to be used in GUI, preferable a resource string\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetTableDescription(String tableDescription)
     parameters:
     - id: tableDescription
       type: CRMScript.Global.String
-      description: 
+      description: Name to be used in GUI, preferable a resource string
     return:
       type: CRMScript.Global.Void
   example: 
@@ -102,14 +104,14 @@ items:
   nameWithType: NSEntityName.SetTableName(String)
   fullName: CRMScript.NetServer.NSEntityName.SetTableName(String)
   type: Method
-  summary: "\nThe name of the table in the database\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetTableName(String tableName)
     parameters:
     - id: tableName
       type: CRMScript.Global.String
-      description: 
+      description: The name of the table in the database
     return:
       type: CRMScript.Global.Void
   example: 
