--- a/docs/api-reference/CRMScript.NetServer.NSEventData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSEventData.yml
@@ -194,14 +194,14 @@ items:
   nameWithType: NSEventData.GetType()
   fullName: CRMScript.NetServer.NSEventData.GetType()
   type: Method
-  summary: "\n<ul><li>Enum: 0 = Unknown</li><li>Enum: 100 = NewTicket</li><li>Enum: 101 = NewTicketFromCustomerCenter</li><li>Enum: 102 = NewTicketFromEmail</li><li>Enum: 103 = NewTicketFromCustomerCenterBeforeSave</li><li>Enum: 104 = NewTicketFromSpmLink</li><li>Enum: 105 = NewNotifyTicketFromForm</li><li>Enum: 106 = NewTicketFromForm</li><li>Enum: 109 = TicketSave</li><li>Enum: 110 = TicketClosed</li><li>Enum: 111 = TicketPostponed</li><li>Enum: 112 = TicketDeleted</li><li>Enum: 113 = TicketActivated</li><li>Enum: 120 = TicketReopened</li><li>Enum: 121 = TicketReopenedFromCustomerCenter</li><li>Enum: 122 = TicketReopenedFromEmail</li><li>Enum: 140 = TicketChangedPriority</li><li>Enum: 141 = TicketChangedCategory</li><li>Enum: 142 = TicketChangedOwnedBy</li><li>Enum: 143 = TicketChangedPrimaryCustomer</li><li>Enum: 144 = TicketChangedTicketStatus</li><li>Enum: 145 = TicketChangedSlevel</li><li>Enum: 150 = TicketMessageAdded</li><li>Enum: 151 = TicketInternalMessageAdded</li><li>Enum: 152 = TicketExternalMessageAdded</li><li>Enum: 153 = TicketMessageSentimentCalculated</li><li>Enum: 200 = CompactModeInjection</li><li>Enum: 210 = CustomerCenterAuthentication</li><li>Enum: 300 = ScheduledTaskFailed</li><li>Enum: 301 = DbiTaskFailed</li><li>Enum: 302 = CustomerSetSubscriptions</li><li>Enum: 303 = ImportMailBeforeProcessing</li><li>Enum: 304 = ImportMailAfterProcessing</li><li>Enum: 305 = MainMenu</li><li>Enum: 400 = ChatNewSession</li><li>Enum: 401 = ChatSessionChangedStatus</li><li>Enum: 402 = ChatBeforeSaveNewMessage</li><li>Enum: 403 = ChatAfterSaveNewMessage</li><li>Enum: 500 = ServiceScreenNewTicketLoad</li><li>Enum: 501 = ServiceScreenNewQuickTicketLoad</li><li>Enum: 502 = ServiceScreenListTicketMessagesLoad</li><li>Enum: 503 = ServiceScreenAddMessageLoad</li><li>Enum: 504 = ServiceScreenEditTicketLoad</li><li>Enum: 505 = ServiceScreenViewCustomerLoad</li><li>Enum: 506 = ServiceScreenEditCustomerLoad</li><li>Enum: 507 = ServiceScreenViewCompanyLoad</li><li>Enum: 508 = ServiceScreenEditCompanyLoad</li><li>Enum: 509 = ServiceScreenForwardLoad</li><li>Enum: 510 = ServiceScreenEditExtraTableLoad</li><li>Enum: 600 = ServiceScreenNewTicketBeforeSubmit</li><li>Enum: 601 = ServiceScreenNewQuickTicketBeforeSubmit</li><li>Enum: 602 = ServiceScreenListTicketMessagesBeforeSubmit</li><li>Enum: 603 = ServiceScreenAddMessageBeforeSubmit</li><li>Enum: 604 = ServiceScreenEditTicketBeforeSubmit</li><li>Enum: 605 = ServiceScreenViewCustomerBeforeSubmit</li><li>Enum: 606 = ServiceScreenEditCustomerBeforeSubmit</li><li>Enum: 607 = ServiceScreenViewCompanyBeforeSubmit</li><li>Enum: 608 = ServiceScreenEditCompanyBeforeSubmit</li><li>Enum: 609 = ServiceScreenForwardBeforeSubmit</li><li>Enum: 610 = ServiceScreenEditExtraTableBeforeSubmit</li><li>Enum: 700 = ServiceScreenNewTicketAfterSubmit</li><li>Enum: 701 = ServiceScreenNewQuickTicketAfterSubmit</li><li>Enum: 702 = ServiceScreenListTicketMessagesAfterSubmit</li><li>Enum: 703 = ServiceScreenAddMessageAfterSubmit</li><li>Enum: 704 = ServiceScreenEditTicketAfterSubmit</li><li>Enum: 705 = ServiceScreenViewCustomerAfterSubmit</li><li>Enum: 706 = ServiceScreenEditCustomerAfterSubmit</li><li>Enum: 707 = ServiceScreenViewCompanyAfterSubmit</li><li>Enum: 708 = ServiceScreenEditCompanyAfterSubmit</li><li>Enum: 709 = ServiceScreenForwardAfterSubmit</li><li>Enum: 710 = ServiceScreenEditExtraTableAfterSubmit</li><li>Enum: 1001 = SalesBeforeSaveAppointment</li><li>Enum: 1002 = SalesBeforeSaveStakeholder</li><li>Enum: 1003 = SalesBeforeSaveQuote</li><li>Enum: 1004 = SalesBeforeSaveDocument</li><li>Enum: 1005 = SalesBeforeSaveContact</li><li>Enum: 1006 = SalesBeforeSavePerson</li><li>Enum: 1007 = SalesBeforeSaveRelation</li><li>Enum: 1008 = SalesBeforeSaveSale</li><li>Enum: 1009 = SalesBeforeSaveProject</li><li>Enum: 1010 = SalesBeforeSaveSelection</li><li>Enum: 1011 = SalesBeforeSaveProjectMember</li><li>Enum: 1012 = SalesBeforeSaveSelectionMember</li><li>Enum: 1013 = SalesBeforeSaveQuoteLine</li><li>Enum: 1101 = SalesAfterSaveAppointment</li><li>Enum: 1102 = SalesAfterSaveStakeholder</li><li>Enum: 1103 = SalesAfterSaveQuote</li><li>Enum: 1104 = SalesAfterSaveDocument</li><li>Enum: 1105 = SalesAfterSaveContact</li><li>Enum: 1106 = SalesAfterSavePerson</li><li>Enum: 1107 = SalesAfterSaveRelation</li><li>Enum: 1108 = SalesAfterSaveSale</li><li>Enum: 1109 = SalesAfterSaveProject</li><li>Enum: 1110 = SalesAfterSaveSelection</li><li>Enum: 1111 = SalesAfterSaveProjectMember</li><li>Enum: 1112 = SalesAfterSaveSelectionMember</li><li>Enum: 1113 = SalesAfterSaveQuoteLine</li></ul>\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Integer GetType()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The type of event we are triggered by
+      description: The type of event we are triggered by. See <xref href=\"CRMScript.NetServer.EventHandlerType\" data-throw-if-not-resolved=\"false\"></xref>
   example: 
   - "\n<pre><code>NSEventData thing;\nInteger type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSEventData.#ctor
@@ -390,7 +390,7 @@ items:
     parameters:
     - id: type
       type: CRMScript.Global.Integer
-      description: The type of event we are triggered by. See enum type.
+      description: The type of event we are triggered by. See <xref href=\"CRMScript.NetServer.EventHandlerType\" data-throw-if-not-resolved=\"false\"></xref>
     return:
       type: CRMScript.Global.Void
   example: 
@@ -432,3 +432,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.EventHandlerType
+  commentId: T:CRMScript.NetServer.EventHandlerType
+  isExternal: true
+  name: EventHandlerType
+  nameWithType: EventHandlerType
+  fullName: CRMScript.NetServer.EventHandlerType
