--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoDynamicLink.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoDynamicLink.yml
@@ -34,6 +34,8 @@ items:
   syntax: 
     content: GetDefaultValue()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSFieldInfoDynamicLink.GetLinkName()
   commentId: M:CRMScript.NetServer.NSFieldInfoDynamicLink.GetLinkName()
