--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoShortText.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoShortText.yml
@@ -38,6 +38,8 @@ items:
   syntax: 
     content: GetChoices()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSFieldInfoShortText.GetDefaultValue()
   commentId: M:CRMScript.NetServer.NSFieldInfoShortText.GetDefaultValue()
