--- a/docs/api-reference/CRMScript.NetServer.NSFieldProperty.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldProperty.yml
@@ -38,6 +38,8 @@ items:
   syntax: 
     content: GetFieldLength()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSFieldProperty.GetFieldRight()
   commentId: M:CRMScript.NetServer.NSFieldProperty.GetFieldRight()
@@ -54,6 +56,8 @@ items:
   syntax: 
     content: GetFieldRight()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSFieldProperty.GetFieldType()
   commentId: M:CRMScript.NetServer.NSFieldProperty.GetFieldType()
@@ -70,6 +74,8 @@ items:
   syntax: 
     content: GetFieldType()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSFieldProperty.GetLength()
   commentId: M:CRMScript.NetServer.NSFieldProperty.GetLength()
@@ -86,6 +92,8 @@ items:
   syntax: 
     content: GetLength()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSFieldProperty.GetType()
   commentId: M:CRMScript.NetServer.NSFieldProperty.GetType()
@@ -102,6 +110,8 @@ items:
   syntax: 
     content: GetType()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSFieldProperty.#ctor
   commentId: M:CRMScript.NetServer.NSFieldProperty.#ctor
