--- a/docs/api-reference/CRMScript.NetServer.NSFieldRight.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldRight.yml
@@ -34,6 +34,8 @@ items:
   syntax: 
     content: GetFieldRight()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSFieldRight.GetMask()
   commentId: M:CRMScript.NetServer.NSFieldRight.GetMask()
@@ -50,6 +52,8 @@ items:
   syntax: 
     content: GetMask()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSFieldRight.GetReason()
   commentId: M:CRMScript.NetServer.NSFieldRight.GetReason()
@@ -66,6 +70,8 @@ items:
   syntax: 
     content: GetReason()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSFieldRight.#ctor
   commentId: M:CRMScript.NetServer.NSFieldRight.#ctor
