--- a/docs/api-reference/CRMScript.NetServer.NSForeignSystemAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSForeignSystemAgent.yml
@@ -851,6 +851,8 @@ items:
   syntax: 
     content: SaveForeignAppEntity()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSForeignSystem  agent;\nNSForeignAppEntity thing = agent.CreateDefaultForeignAppEntity();\nthing = agent.SaveForeignAppEntity(thing);</code></pre>\n"
 - uid: CRMScript.NetServer.NSForeignSystemAgent.SaveForeignDevice(NSForeignDevice,String)
