--- a/docs/api-reference/CRMScript.NetServer.NSGrantedModuleLicense.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSGrantedModuleLicense.yml
@@ -58,6 +58,8 @@ items:
   syntax: 
     content: GetDescription()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSGrantedModuleLicense.GetExpiryDate()
   commentId: M:CRMScript.NetServer.NSGrantedModuleLicense.GetExpiryDate()
@@ -74,6 +76,8 @@ items:
   syntax: 
     content: GetExpiryDate()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSGrantedModuleLicense.GetExtraFlags()
   commentId: M:CRMScript.NetServer.NSGrantedModuleLicense.GetExtraFlags()
@@ -90,6 +94,8 @@ items:
   syntax: 
     content: GetExtraFlags()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSGrantedModuleLicense.GetExtraInfo()
   commentId: M:CRMScript.NetServer.NSGrantedModuleLicense.GetExtraInfo()
@@ -106,6 +112,8 @@ items:
   syntax: 
     content: GetExtraInfo()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSGrantedModuleLicense.GetIsHidden()
   commentId: M:CRMScript.NetServer.NSGrantedModuleLicense.GetIsHidden()
@@ -122,6 +130,8 @@ items:
   syntax: 
     content: GetIsHidden()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSGrantedModuleLicense.GetIsUnrestricted()
   commentId: M:CRMScript.NetServer.NSGrantedModuleLicense.GetIsUnrestricted()
@@ -138,6 +148,8 @@ items:
   syntax: 
     content: GetIsUnrestricted()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSGrantedModuleLicense.GetLicenseNumber()
   commentId: M:CRMScript.NetServer.NSGrantedModuleLicense.GetLicenseNumber()
@@ -154,6 +166,8 @@ items:
   syntax: 
     content: GetLicenseNumber()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSGrantedModuleLicense.GetLicenseType()
   commentId: M:CRMScript.NetServer.NSGrantedModuleLicense.GetLicenseType()
@@ -170,6 +184,8 @@ items:
   syntax: 
     content: GetLicenseType()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSGrantedModuleLicense.GetModuleId()
   commentId: M:CRMScript.NetServer.NSGrantedModuleLicense.GetModuleId()
@@ -186,6 +202,8 @@ items:
   syntax: 
     content: GetModuleId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSGrantedModuleLicense.GetName()
   commentId: M:CRMScript.NetServer.NSGrantedModuleLicense.GetName()
@@ -202,6 +220,8 @@ items:
   syntax: 
     content: GetName()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSGrantedModuleLicense.GetOwnerDescription()
   commentId: M:CRMScript.NetServer.NSGrantedModuleLicense.GetOwnerDescription()
@@ -218,6 +238,8 @@ items:
   syntax: 
     content: GetOwnerDescription()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSGrantedModuleLicense.GetOwnerId()
   commentId: M:CRMScript.NetServer.NSGrantedModuleLicense.GetOwnerId()
@@ -234,6 +256,8 @@ items:
   syntax: 
     content: GetOwnerId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSGrantedModuleLicense.GetOwnerName()
   commentId: M:CRMScript.NetServer.NSGrantedModuleLicense.GetOwnerName()
@@ -250,6 +274,8 @@ items:
   syntax: 
     content: GetOwnerName()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSGrantedModuleLicense.GetSortOrder()
   commentId: M:CRMScript.NetServer.NSGrantedModuleLicense.GetSortOrder()
@@ -266,6 +292,8 @@ items:
   syntax: 
     content: GetSortOrder()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSGrantedModuleLicense.GetVersion()
   commentId: M:CRMScript.NetServer.NSGrantedModuleLicense.GetVersion()
@@ -282,6 +310,8 @@ items:
   syntax: 
     content: GetVersion()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSGrantedModuleLicense.#ctor
   commentId: M:CRMScript.NetServer.NSGrantedModuleLicense.#ctor
