--- a/docs/api-reference/CRMScript.NetServer.NSImage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSImage.yml
@@ -30,6 +30,8 @@ items:
   syntax: 
     content: GetImage()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSImage.#ctor
   commentId: M:CRMScript.NetServer.NSImage.#ctor
