--- a/docs/api-reference/CRMScript.NetServer.NSLicenseInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSLicenseInfo.yml
@@ -161,6 +161,8 @@ items:
   syntax: 
     content: GetExtraInfo()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSLicenseInfo.GetGraceDate()
   commentId: M:CRMScript.NetServer.NSLicenseInfo.GetGraceDate()
