--- a/docs/api-reference/CRMScript.NetServer.NSListAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSListAgent.yml
@@ -1190,7 +1190,7 @@ items:
   fullName: CRMScript.NetServer.NSListAgent.GenerateNavigationUrl(Integer,String)
   type: Method
   summary: "\nThis methods generates the navigation URL to be used to navigate to the panel\n"
-  remarks: "\n<p>See enum visibleIn.</p>\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.Navigation\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
     content: String GenerateNavigationUrl(Integer visibleIn, String windowName)
     parameters:
@@ -7641,3 +7641,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.Navigation
+  commentId: T:CRMScript.NetServer.Navigation
+  isExternal: true
+  name: Navigation
+  nameWithType: Navigation
+  fullName: CRMScript.NetServer.Navigation
