--- a/docs/api-reference/CRMScript.NetServer.NSLocalizedField.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSLocalizedField.yml
@@ -40,6 +40,8 @@ items:
   syntax: 
     content: GetAddressType()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSLocalizedField.GetLabel()
   commentId: M:CRMScript.NetServer.NSLocalizedField.GetLabel()
@@ -56,6 +58,8 @@ items:
   syntax: 
     content: GetLabel()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSLocalizedField.GetName()
   commentId: M:CRMScript.NetServer.NSLocalizedField.GetName()
@@ -72,6 +76,8 @@ items:
   syntax: 
     content: GetName()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSLocalizedField.GetTooltip()
   commentId: M:CRMScript.NetServer.NSLocalizedField.GetTooltip()
@@ -88,6 +94,8 @@ items:
   syntax: 
     content: GetTooltip()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSLocalizedField.GetValue()
   commentId: M:CRMScript.NetServer.NSLocalizedField.GetValue()
@@ -104,6 +112,8 @@ items:
   syntax: 
     content: GetValue()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSLocalizedField.GetValueLength()
   commentId: M:CRMScript.NetServer.NSLocalizedField.GetValueLength()
@@ -120,6 +130,8 @@ items:
   syntax: 
     content: GetValueLength()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSLocalizedField.#ctor
   commentId: M:CRMScript.NetServer.NSLocalizedField.#ctor
