--- a/docs/api-reference/CRMScript.NetServer.NSModuleLicense.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSModuleLicense.yml
@@ -446,6 +446,8 @@ items:
   syntax: 
     content: Void SetLicenseType()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSModuleLicense thing;\nInteger licenseType;\nthing.SetLicenseType(licenseType);</code></pre>\n"
 - uid: CRMScript.NetServer.NSModuleLicense.SetModuleDescription(String)
