--- a/docs/api-reference/CRMScript.NetServer.NSPersonEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPersonEntity.yml
@@ -194,6 +194,8 @@ items:
   syntax: 
     content: GetAddress()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSPersonEntity thing;\nNSAddress address = thing.GetAddress();</code></pre>\n"
 - uid: CRMScript.NetServer.NSPersonEntity.GetAssociate()
@@ -249,6 +251,8 @@ items:
   syntax: 
     content: GetBlockEmarketing()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSPersonEntity.GetBounceEmails()
   commentId: M:CRMScript.NetServer.NSPersonEntity.GetBounceEmails()
@@ -930,6 +934,8 @@ items:
   syntax: 
     content: GetPagers()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSPersonEntity.GetPersonId()
   commentId: M:CRMScript.NetServer.NSPersonEntity.GetPersonId()
@@ -1423,6 +1429,8 @@ items:
   syntax: 
     content: Void SetAddress()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSPersonEntity thing;\nNSAddress address;\nthing.SetAddress(address);</code></pre>\n"
 - uid: CRMScript.NetServer.NSPersonEntity.SetAssociate()
