--- a/docs/api-reference/CRMScript.NetServer.NSProjectAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProjectAgent.yml
@@ -1025,6 +1025,8 @@ items:
   syntax: 
     content: SaveProjectEventEntity()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSProject  agent;\nNSProjectEventEntity thing = agent.CreateDefaultProjectEventEntity();\nthing = agent.SaveProjectEventEntity(thing);</code></pre>\n"
 - uid: CRMScript.NetServer.NSProjectAgent.SaveProjectMember(NSProjectMember)
