--- a/docs/api-reference/CRMScript.NetServer.NSProjectTypeStatusLink.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProjectTypeStatusLink.yml
@@ -42,6 +42,8 @@ items:
   syntax: 
     content: GetProjectTypeStatusLinkId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusId()
   commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusId()
@@ -58,6 +60,8 @@ items:
   syntax: 
     content: GetProjStatusId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusName()
   commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusName()
@@ -74,6 +78,8 @@ items:
   syntax: 
     content: GetProjStatusName()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusTooltip()
   commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.GetProjStatusTooltip()
@@ -90,6 +96,8 @@ items:
   syntax: 
     content: GetProjStatusTooltip()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeId()
   commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeId()
@@ -106,6 +114,8 @@ items:
   syntax: 
     content: GetProjTypeId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeName()
   commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeName()
@@ -122,6 +132,8 @@ items:
   syntax: 
     content: GetProjTypeName()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeTooltip()
   commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.GetProjTypeTooltip()
@@ -138,6 +150,8 @@ items:
   syntax: 
     content: GetProjTypeTooltip()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSProjectTypeStatusLink.#ctor
   commentId: M:CRMScript.NetServer.NSProjectTypeStatusLink.#ctor
