--- a/docs/api-reference/CRMScript.NetServer.NSProvidedCredential.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProvidedCredential.yml
@@ -36,6 +36,8 @@ items:
   syntax: 
     content: GetCredentialId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSProvidedCredential.GetDisplayName()
   commentId: M:CRMScript.NetServer.NSProvidedCredential.GetDisplayName()
@@ -52,6 +54,8 @@ items:
   syntax: 
     content: GetDisplayName()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSProvidedCredential.GetSearchName()
   commentId: M:CRMScript.NetServer.NSProvidedCredential.GetSearchName()
@@ -68,6 +72,8 @@ items:
   syntax: 
     content: GetSearchName()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSProvidedCredential.GetType()
   commentId: M:CRMScript.NetServer.NSProvidedCredential.GetType()
@@ -84,6 +90,8 @@ items:
   syntax: 
     content: GetType()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSProvidedCredential.#ctor
   commentId: M:CRMScript.NetServer.NSProvidedCredential.#ctor
