--- a/docs/api-reference/CRMScript.NetServer.NSRecipientStatistics.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRecipientStatistics.yml
@@ -40,6 +40,8 @@ items:
   syntax: 
     content: GetNoAddresses()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecipientStatistics.GetNoFaxOrEmails()
   commentId: M:CRMScript.NetServer.NSRecipientStatistics.GetNoFaxOrEmails()
@@ -56,6 +58,8 @@ items:
   syntax: 
     content: GetNoFaxOrEmails()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecipientStatistics.GetTotal()
   commentId: M:CRMScript.NetServer.NSRecipientStatistics.GetTotal()
@@ -72,6 +76,8 @@ items:
   syntax: 
     content: GetTotal()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecipientStatistics.GetValidEmailAddresses()
   commentId: M:CRMScript.NetServer.NSRecipientStatistics.GetValidEmailAddresses()
@@ -88,6 +94,8 @@ items:
   syntax: 
     content: GetValidEmailAddresses()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecipientStatistics.GetValidFaxNumbers()
   commentId: M:CRMScript.NetServer.NSRecipientStatistics.GetValidFaxNumbers()
@@ -104,6 +112,8 @@ items:
   syntax: 
     content: GetValidFaxNumbers()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecipientStatistics.GetValidPostalAddresses()
   commentId: M:CRMScript.NetServer.NSRecipientStatistics.GetValidPostalAddresses()
@@ -120,6 +130,8 @@ items:
   syntax: 
     content: GetValidPostalAddresses()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecipientStatistics.#ctor
   commentId: M:CRMScript.NetServer.NSRecipientStatistics.#ctor
