--- a/docs/api-reference/CRMScript.NetServer.NSRecurrenceDate.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRecurrenceDate.yml
@@ -38,6 +38,8 @@ items:
   syntax: 
     content: GetDate()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceDate.GetDescription()
   commentId: M:CRMScript.NetServer.NSRecurrenceDate.GetDescription()
@@ -54,6 +56,8 @@ items:
   syntax: 
     content: GetDescription()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceDate.GetDescriptionStyleHint()
   commentId: M:CRMScript.NetServer.NSRecurrenceDate.GetDescriptionStyleHint()
@@ -70,6 +74,8 @@ items:
   syntax: 
     content: GetDescriptionStyleHint()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceDate.GetIsConflict()
   commentId: M:CRMScript.NetServer.NSRecurrenceDate.GetIsConflict()
@@ -86,6 +92,8 @@ items:
   syntax: 
     content: GetIsConflict()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceDate.GetTooltip()
   commentId: M:CRMScript.NetServer.NSRecurrenceDate.GetTooltip()
@@ -102,6 +110,8 @@ items:
   syntax: 
     content: GetTooltip()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceDate.#ctor
   commentId: M:CRMScript.NetServer.NSRecurrenceDate.#ctor
