--- a/docs/api-reference/CRMScript.NetServer.NSRecurrenceDayPattern.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRecurrenceDayPattern.yml
@@ -32,6 +32,8 @@ items:
   syntax: 
     content: GetCycle()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceDayPattern.GetPattern()
   commentId: M:CRMScript.NetServer.NSRecurrenceDayPattern.GetPattern()
@@ -48,6 +50,8 @@ items:
   syntax: 
     content: GetPattern()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceDayPattern.#ctor
   commentId: M:CRMScript.NetServer.NSRecurrenceDayPattern.#ctor
