--- a/docs/api-reference/CRMScript.NetServer.NSRecurrenceInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRecurrenceInfo.yml
@@ -52,6 +52,8 @@ items:
   syntax: 
     content: GetDates()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceInfo.GetDayPattern()
   commentId: M:CRMScript.NetServer.NSRecurrenceInfo.GetDayPattern()
@@ -68,6 +70,8 @@ items:
   syntax: 
     content: GetDayPattern()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceInfo.GetEndDate()
   commentId: M:CRMScript.NetServer.NSRecurrenceInfo.GetEndDate()
@@ -84,6 +88,8 @@ items:
   syntax: 
     content: GetEndDate()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceInfo.GetIsRecurrence()
   commentId: M:CRMScript.NetServer.NSRecurrenceInfo.GetIsRecurrence()
@@ -100,6 +106,8 @@ items:
   syntax: 
     content: GetIsRecurrence()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceInfo.GetMonthPattern()
   commentId: M:CRMScript.NetServer.NSRecurrenceInfo.GetMonthPattern()
@@ -116,6 +124,8 @@ items:
   syntax: 
     content: GetMonthPattern()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceInfo.GetPattern()
   commentId: M:CRMScript.NetServer.NSRecurrenceInfo.GetPattern()
@@ -132,6 +142,8 @@ items:
   syntax: 
     content: GetPattern()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceInfo.GetRecurrenceCounter()
   commentId: M:CRMScript.NetServer.NSRecurrenceInfo.GetRecurrenceCounter()
@@ -148,6 +160,8 @@ items:
   syntax: 
     content: GetRecurrenceCounter()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceInfo.GetRecurrenceEndType()
   commentId: M:CRMScript.NetServer.NSRecurrenceInfo.GetRecurrenceEndType()
@@ -164,6 +178,8 @@ items:
   syntax: 
     content: GetRecurrenceEndType()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceInfo.GetRecurrenceId()
   commentId: M:CRMScript.NetServer.NSRecurrenceInfo.GetRecurrenceId()
@@ -180,6 +196,8 @@ items:
   syntax: 
     content: GetRecurrenceId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceInfo.GetStartDate()
   commentId: M:CRMScript.NetServer.NSRecurrenceInfo.GetStartDate()
@@ -196,6 +214,8 @@ items:
   syntax: 
     content: GetStartDate()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceInfo.GetWeekPattern()
   commentId: M:CRMScript.NetServer.NSRecurrenceInfo.GetWeekPattern()
@@ -212,6 +232,8 @@ items:
   syntax: 
     content: GetWeekPattern()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceInfo.GetYearPattern()
   commentId: M:CRMScript.NetServer.NSRecurrenceInfo.GetYearPattern()
@@ -228,6 +250,8 @@ items:
   syntax: 
     content: GetYearPattern()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceInfo.#ctor
   commentId: M:CRMScript.NetServer.NSRecurrenceInfo.#ctor
