--- a/docs/api-reference/CRMScript.NetServer.NSRecurrenceMonthPattern.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRecurrenceMonthPattern.yml
@@ -38,6 +38,8 @@ items:
   syntax: 
     content: GetCycle()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceMonthPattern.GetDay()
   commentId: M:CRMScript.NetServer.NSRecurrenceMonthPattern.GetDay()
@@ -54,6 +56,8 @@ items:
   syntax: 
     content: GetDay()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceMonthPattern.GetPattern()
   commentId: M:CRMScript.NetServer.NSRecurrenceMonthPattern.GetPattern()
@@ -70,6 +74,8 @@ items:
   syntax: 
     content: GetPattern()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceMonthPattern.GetWeekday()
   commentId: M:CRMScript.NetServer.NSRecurrenceMonthPattern.GetWeekday()
@@ -86,6 +92,8 @@ items:
   syntax: 
     content: GetWeekday()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceMonthPattern.GetWeekOfMonth()
   commentId: M:CRMScript.NetServer.NSRecurrenceMonthPattern.GetWeekOfMonth()
@@ -102,6 +110,8 @@ items:
   syntax: 
     content: GetWeekOfMonth()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceMonthPattern.#ctor
   commentId: M:CRMScript.NetServer.NSRecurrenceMonthPattern.#ctor
