--- a/docs/api-reference/CRMScript.NetServer.NSRecurrenceWeekPattern.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRecurrenceWeekPattern.yml
@@ -32,6 +32,8 @@ items:
   syntax: 
     content: GetCycle()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceWeekPattern.GetWeekdays()
   commentId: M:CRMScript.NetServer.NSRecurrenceWeekPattern.GetWeekdays()
@@ -48,6 +50,8 @@ items:
   syntax: 
     content: GetWeekdays()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSRecurrenceWeekPattern.#ctor
   commentId: M:CRMScript.NetServer.NSRecurrenceWeekPattern.#ctor
