--- a/docs/api-reference/CRMScript.NetServer.NSReplicationAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReplicationAgent.yml
@@ -175,6 +175,8 @@ items:
   syntax: 
     content: SaveSatellite()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSReplication  agent;\nNSSatellite thing = agent.CreateDefaultSatellite();\nthing = agent.SaveSatellite(thing);</code></pre>\n"
 - uid: CRMScript.NetServer.NSReplicationAgent.SetFreetextSearchEnabledOnArea(Integer,Bool)
