--- a/docs/api-reference/CRMScript.NetServer.NSSaleEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleEntity.yml
@@ -1287,6 +1287,8 @@ items:
   syntax: 
     content: Void SetIsPublished()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSaleEntity.SetLinks(NSLink[])
   commentId: M:CRMScript.NetServer.NSSaleEntity.SetLinks(NSLink[])
