--- a/docs/api-reference/CRMScript.NetServer.NSSaleTypeStageLink.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleTypeStageLink.yml
@@ -44,6 +44,8 @@ items:
   syntax: 
     content: GetProbability()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSaleTypeStageLink.GetProbId()
   commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetProbId()
@@ -60,6 +62,8 @@ items:
   syntax: 
     content: GetProbId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSaleTypeStageLink.GetProbName()
   commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetProbName()
@@ -76,6 +80,8 @@ items:
   syntax: 
     content: GetProbName()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSaleTypeStageLink.GetProbTooltip()
   commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetProbTooltip()
@@ -92,6 +98,8 @@ items:
   syntax: 
     content: GetProbTooltip()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeId()
   commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeId()
@@ -108,6 +116,8 @@ items:
   syntax: 
     content: GetSaleTypeId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeName()
   commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeName()
@@ -124,6 +134,8 @@ items:
   syntax: 
     content: GetSaleTypeName()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeStageLinkId()
   commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeStageLinkId()
@@ -140,6 +152,8 @@ items:
   syntax: 
     content: GetSaleTypeStageLinkId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeTooltip()
   commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.GetSaleTypeTooltip()
@@ -156,6 +170,8 @@ items:
   syntax: 
     content: GetSaleTypeTooltip()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSaleTypeStageLink.#ctor
   commentId: M:CRMScript.NetServer.NSSaleTypeStageLink.#ctor
