--- a/docs/api-reference/CRMScript.NetServer.NSSoPrincipalCarrier.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSoPrincipalCarrier.yml
@@ -80,6 +80,8 @@ items:
   syntax: 
     content: GetAssociate()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetAssociateId()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetAssociateId()
@@ -96,6 +98,8 @@ items:
   syntax: 
     content: GetAssociateId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetBusinessId()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetBusinessId()
@@ -112,6 +116,8 @@ items:
   syntax: 
     content: GetBusinessId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetCategoryId()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetCategoryId()
@@ -128,6 +134,8 @@ items:
   syntax: 
     content: GetCategoryId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetContactId()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetContactId()
@@ -144,6 +152,8 @@ items:
   syntax: 
     content: GetContactId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetContactOwner()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetContactOwner()
@@ -160,6 +170,8 @@ items:
   syntax: 
     content: GetContactOwner()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetCountryId()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetCountryId()
@@ -176,6 +188,8 @@ items:
   syntax: 
     content: GetCountryId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetDatabaseContextIdentifier()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetDatabaseContextIdentifier()
@@ -192,6 +206,8 @@ items:
   syntax: 
     content: GetDatabaseContextIdentifier()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetEjAccessLevel()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetEjAccessLevel()
@@ -208,6 +224,8 @@ items:
   syntax: 
     content: GetEjAccessLevel()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetEjUserId()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetEjUserId()
@@ -224,6 +242,8 @@ items:
   syntax: 
     content: GetEjUserId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetEjUserStatus()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetEjUserStatus()
@@ -240,6 +260,8 @@ items:
   syntax: 
     content: GetEjUserStatus()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetEMailAddress()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetEMailAddress()
@@ -256,6 +278,8 @@ items:
   syntax: 
     content: GetEMailAddress()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetFullName()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetFullName()
@@ -272,6 +296,8 @@ items:
   syntax: 
     content: GetFullName()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetFunctionRights()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetFunctionRights()
@@ -288,6 +314,8 @@ items:
   syntax: 
     content: GetFunctionRights()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetGroupId()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetGroupId()
@@ -304,6 +332,8 @@ items:
   syntax: 
     content: GetGroupId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetHomeCountryId()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetHomeCountryId()
@@ -320,6 +350,8 @@ items:
   syntax: 
     content: GetHomeCountryId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetIsPerson()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetIsPerson()
@@ -336,6 +368,8 @@ items:
   syntax: 
     content: GetIsPerson()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetLicenses()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetLicenses()
@@ -352,6 +386,8 @@ items:
   syntax: 
     content: GetLicenses()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetPersonId()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetPersonId()
@@ -368,6 +404,8 @@ items:
   syntax: 
     content: GetPersonId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetProvidedCredentials()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetProvidedCredentials()
@@ -384,6 +422,8 @@ items:
   syntax: 
     content: GetProvidedCredentials()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetRoleDescription()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetRoleDescription()
@@ -400,6 +440,8 @@ items:
   syntax: 
     content: GetRoleDescription()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetRoleId()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetRoleId()
@@ -416,6 +458,8 @@ items:
   syntax: 
     content: GetRoleId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetRoleName()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetRoleName()
@@ -432,6 +476,8 @@ items:
   syntax: 
     content: GetRoleName()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetRoleType()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetRoleType()
@@ -448,6 +494,8 @@ items:
   syntax: 
     content: GetRoleType()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetSecondaryGroups()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetSecondaryGroups()
@@ -464,6 +512,8 @@ items:
   syntax: 
     content: GetSecondaryGroups()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.GetUserType()
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.GetUserType()
@@ -480,6 +530,8 @@ items:
   syntax: 
     content: GetUserType()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoPrincipalCarrier.#ctor
   commentId: M:CRMScript.NetServer.NSSoPrincipalCarrier.#ctor
