--- a/docs/api-reference/CRMScript.NetServer.NSSoSystemInfoCarrier.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSoSystemInfoCarrier.yml
@@ -68,6 +68,8 @@ items:
   syntax: 
     content: GetAccumulatedNextCheckDate()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoSystemInfoCarrier.GetAssemblyVersion()
   commentId: M:CRMScript.NetServer.NSSoSystemInfoCarrier.GetAssemblyVersion()
@@ -84,6 +86,8 @@ items:
   syntax: 
     content: GetAssemblyVersion()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoSystemInfoCarrier.GetBranchName()
   commentId: M:CRMScript.NetServer.NSSoSystemInfoCarrier.GetBranchName()
@@ -100,6 +104,8 @@ items:
   syntax: 
     content: GetBranchName()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoSystemInfoCarrier.GetBuildLabel()
   commentId: M:CRMScript.NetServer.NSSoSystemInfoCarrier.GetBuildLabel()
@@ -116,6 +122,8 @@ items:
   syntax: 
     content: GetBuildLabel()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoSystemInfoCarrier.GetBuildType()
   commentId: M:CRMScript.NetServer.NSSoSystemInfoCarrier.GetBuildType()
@@ -132,6 +140,8 @@ items:
   syntax: 
     content: GetBuildType()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoSystemInfoCarrier.GetCompanyId()
   commentId: M:CRMScript.NetServer.NSSoSystemInfoCarrier.GetCompanyId()
@@ -148,6 +158,8 @@ items:
   syntax: 
     content: GetCompanyId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoSystemInfoCarrier.GetCompanyName()
   commentId: M:CRMScript.NetServer.NSSoSystemInfoCarrier.GetCompanyName()
@@ -164,6 +176,8 @@ items:
   syntax: 
     content: GetCompanyName()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoSystemInfoCarrier.GetDatabaseMinor()
   commentId: M:CRMScript.NetServer.NSSoSystemInfoCarrier.GetDatabaseMinor()
@@ -180,6 +194,8 @@ items:
   syntax: 
     content: GetDatabaseMinor()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoSystemInfoCarrier.GetDatabaseName()
   commentId: M:CRMScript.NetServer.NSSoSystemInfoCarrier.GetDatabaseName()
@@ -196,6 +212,8 @@ items:
   syntax: 
     content: GetDatabaseName()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoSystemInfoCarrier.GetDatabaseType()
   commentId: M:CRMScript.NetServer.NSSoSystemInfoCarrier.GetDatabaseType()
@@ -212,6 +230,8 @@ items:
   syntax: 
     content: GetDatabaseType()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoSystemInfoCarrier.GetDatabaseVersion()
   commentId: M:CRMScript.NetServer.NSSoSystemInfoCarrier.GetDatabaseVersion()
@@ -228,6 +248,8 @@ items:
   syntax: 
     content: GetDatabaseVersion()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoSystemInfoCarrier.GetDaysUntilNetServerExpiry()
   commentId: M:CRMScript.NetServer.NSSoSystemInfoCarrier.GetDaysUntilNetServerExpiry()
@@ -244,6 +266,8 @@ items:
   syntax: 
     content: GetDaysUntilNetServerExpiry()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoSystemInfoCarrier.GetDescription()
   commentId: M:CRMScript.NetServer.NSSoSystemInfoCarrier.GetDescription()
@@ -260,6 +284,8 @@ items:
   syntax: 
     content: GetDescription()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoSystemInfoCarrier.GetFileVersion()
   commentId: M:CRMScript.NetServer.NSSoSystemInfoCarrier.GetFileVersion()
@@ -276,6 +302,8 @@ items:
   syntax: 
     content: GetFileVersion()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoSystemInfoCarrier.GetIsOnTravel()
   commentId: M:CRMScript.NetServer.NSSoSystemInfoCarrier.GetIsOnTravel()
@@ -292,6 +320,8 @@ items:
   syntax: 
     content: GetIsOnTravel()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoSystemInfoCarrier.GetIsSatellite()
   commentId: M:CRMScript.NetServer.NSSoSystemInfoCarrier.GetIsSatellite()
@@ -308,6 +338,8 @@ items:
   syntax: 
     content: GetIsSatellite()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoSystemInfoCarrier.GetIsUnicode()
   commentId: M:CRMScript.NetServer.NSSoSystemInfoCarrier.GetIsUnicode()
@@ -324,6 +356,8 @@ items:
   syntax: 
     content: GetIsUnicode()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoSystemInfoCarrier.GetLicense()
   commentId: M:CRMScript.NetServer.NSSoSystemInfoCarrier.GetLicense()
@@ -340,6 +374,8 @@ items:
   syntax: 
     content: GetLicense()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoSystemInfoCarrier.GetWarningEnglish()
   commentId: M:CRMScript.NetServer.NSSoSystemInfoCarrier.GetWarningEnglish()
@@ -356,6 +392,8 @@ items:
   syntax: 
     content: GetWarningEnglish()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoSystemInfoCarrier.GetWarningResource()
   commentId: M:CRMScript.NetServer.NSSoSystemInfoCarrier.GetWarningResource()
@@ -372,6 +410,8 @@ items:
   syntax: 
     content: GetWarningResource()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSoSystemInfoCarrier.#ctor
   commentId: M:CRMScript.NetServer.NSSoSystemInfoCarrier.#ctor
