--- a/docs/api-reference/CRMScript.NetServer.NSUser.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUser.yml
@@ -154,6 +154,8 @@ items:
   syntax: 
     content: GetDisplayName()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSUser.GetEjUserId()
   commentId: M:CRMScript.NetServer.NSUser.GetEjUserId()
