--- a/docs/api-reference/CRMScript.NetServer.NSUserDefinedFieldInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserDefinedFieldInfo.yml
@@ -516,6 +516,8 @@ items:
   syntax: 
     content: GetOwnerTableId()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSUserDefinedFieldInfo.GetPage1LineNo()
   commentId: M:CRMScript.NetServer.NSUserDefinedFieldInfo.GetPage1LineNo()
