--- a/docs/api-reference/CRMScript.NetServer.NSUserGroup.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserGroup.yml
@@ -148,6 +148,8 @@ items:
   syntax: 
     content: Void SetDeleted()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSUserGroup thing;\nBool deleted;\nthing.SetDeleted(deleted);</code></pre>\n"
 - uid: CRMScript.NetServer.NSUserGroup.SetId(Integer)
