--- a/docs/api-reference/CRMScript.NetServer.NSVersionInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSVersionInfo.yml
@@ -276,6 +276,8 @@ items:
   syntax: 
     content: Void SetCheckedInDate()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSVersionInfo thing;\nDateTime checkedInDate;\nthing.SetCheckedInDate(checkedInDate);</code></pre>\n"
 - uid: CRMScript.NetServer.NSVersionInfo.SetDescription(String)
