--- a/docs/api-reference/CRMScript.NetServer.NSWebPanelEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWebPanelEntity.yml
@@ -203,6 +203,8 @@ items:
   syntax: 
     content: GetOnSattelite()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSWebPanelEntity.GetOnTravel()
   commentId: M:CRMScript.NetServer.NSWebPanelEntity.GetOnTravel()
@@ -872,7 +874,7 @@ items:
   fullName: CRMScript.NetServer.NSWebPanelEntity.SetVisibleIn(Integer)
   type: Method
   summary: "\nThe webpanel is visible in\n"
-  remarks: "\n<p>See enum visibleIn.</p>\n"
+  remarks: "\nSee <xref href=\"CRMScript.NetServer.Navigation\" data-throw-if-not-resolved=\"false\"></xref>\n"
   syntax: 
     content: Void SetVisibleIn(Integer visibleIn)
     parameters:
@@ -958,3 +960,9 @@ references:
   name: Void
   nameWithType: Void
   fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.Navigation
+  commentId: T:CRMScript.NetServer.Navigation
+  isExternal: true
+  name: Navigation
+  nameWithType: Navigation
+  fullName: CRMScript.NetServer.Navigation
