--- a/docs/api-reference/CRMScript.NetServer.showState.yml
+++ b/docs/api-reference/CRMScript.NetServer.showState.yml
@@ -1,118 +1,119 @@
 ### YamlMime:ManagedReference
 items:
-- uid: CRMScript.NetServer.showState
-  commentId: T:CRMScript.NetServer.showState
-  id: showState
+- uid: CRMScript.NetServer.ShowState
+  # Same as SuperOffice.Data.ShowState
+  commentId: T:CRMScript.NetServer.ShowState
+  id: ShowState
   langs:
   - crmscript
   children:
-  - CRMScript.NetServer.showState.Minimized
-  - CRMScript.NetServer.showState.Maximized
-  - CRMScript.NetServer.showState.Default
-  - CRMScript.NetServer.showState.ToolBar
-  - CRMScript.NetServer.showState.AddressBar
-  - CRMScript.NetServer.showState.StatusBar
-  - CRMScript.NetServer.showState.MenuBar
-  name: showState
-  nameWithType: showState
-  fullName: CRMScript.NetServer.showState
+  - CRMScript.NetServer.ShowState.Minimized
+  - CRMScript.NetServer.ShowState.Maximized
+  - CRMScript.NetServer.ShowState.Default
+  - CRMScript.NetServer.ShowState.ToolBar
+  - CRMScript.NetServer.ShowState.AddressBar
+  - CRMScript.NetServer.ShowState.StatusBar
+  - CRMScript.NetServer.ShowState.MenuBar
+  name: ShowState
+  nameWithType: ShowState
+  fullName: CRMScript.NetServer.ShowState
   type: Enum
-  summary: 
-- uid: CRMScript.NetServer.showState.Minimized
-  commentId: F:CRMScript.NetServer.showState.Minimized
-  id: showState.Minimized
+  summary: "\nValue for the ShowState field in table externalapplication\n"
+- uid: CRMScript.NetServer.ShowState.Minimized
+  commentId: F:CRMScript.NetServer.ShowState.Minimized
+  id: ShowState.Minimized
   langs:
   - crmscript
-  name: showState.Minimized
-  nameWithType: showState.Minimized
-  fullName: CRMScript.NetServer.showState.Minimized
+  name: ShowState.Minimized
+  nameWithType: ShowState.Minimized
+  fullName: CRMScript.NetServer.ShowState.Minimized
   type: Field
-  summary: "\n0: Minimized\n"
+  summary: "\n0: Start application in minimized state\n"
   syntax: 
     content: Minimized = 0
-    type: CRMScript.NetServer.showState
-- uid: CRMScript.NetServer.showState.Maximized
-  commentId: F:CRMScript.NetServer.showState.Maximized
-  id: showState.Maximized
+    type: CRMScript.NetServer.ShowState
+- uid: CRMScript.NetServer.ShowState.Maximized
+  commentId: F:CRMScript.NetServer.ShowState.Maximized
+  id: ShowState.Maximized
   langs:
   - crmscript
-  name: showState.Maximized
-  nameWithType: showState.Maximized
-  fullName: CRMScript.NetServer.showState.Maximized
+  name: ShowState.Maximized
+  nameWithType: ShowState.Maximized
+  fullName: CRMScript.NetServer.ShowState.Maximized
   type: Field
-  summary: "\n1: Maximized\n"
+  summary: "\n1: Start application in maximized state\n"
   syntax: 
     content: Maximized = 1
-    type: CRMScript.NetServer.showState
-- uid: CRMScript.NetServer.showState.Default
-  commentId: F:CRMScript.NetServer.showState.Default
-  id: showState.Default
+    type: CRMScript.NetServer.ShowState
+- uid: CRMScript.NetServer.ShowState.Default
+  commentId: F:CRMScript.NetServer.ShowState.Default
+  id: ShowState.Default
   langs:
   - crmscript
-  name: showState.Default
-  nameWithType: showState.Default
-  fullName: CRMScript.NetServer.showState.Default
+  name: ShowState.Default
+  nameWithType: ShowState.Default
+  fullName: CRMScript.NetServer.ShowState.Default
   type: Field
-  summary: "\n2: Default\n"
+  summary: "\n2: Start application with default window size and position\n"
   syntax: 
     content: Default = 2
-    type: CRMScript.NetServer.showState
-- uid: CRMScript.NetServer.showState.ToolBar
-  commentId: F:CRMScript.NetServer.showState.ToolBar
-  id: showState.ToolBar
+    type: CRMScript.NetServer.ShowState
+- uid: CRMScript.NetServer.ShowState.ToolBar
+  commentId: F:CRMScript.NetServer.ShowState.ToolBar
+  id: ShowState.ToolBar
   langs:
   - crmscript
-  name: showState.ToolBar
-  nameWithType: showState.ToolBar
-  fullName: CRMScript.NetServer.showState.ToolBar
+  name: ShowState.ToolBar
+  nameWithType: ShowState.ToolBar
+  fullName: CRMScript.NetServer.ShowState.ToolBar
   type: Field
-  summary: "\n256: ToolBar\n"
+  summary: "\n256: Show the Browser toolbar\n"
   syntax: 
     content: ToolBar = 256
-    type: CRMScript.NetServer.showState
-- uid: CRMScript.NetServer.showState.AddressBar
-  commentId: F:CRMScript.NetServer.showState.AddressBar
-  id: showState.AddressBar
+    type: CRMScript.NetServer.ShowState
+- uid: CRMScript.NetServer.ShowState.AddressBar
+  commentId: F:CRMScript.NetServer.ShowState.AddressBar
+  id: ShowState.AddressBar
   langs:
   - crmscript
-  name: showState.AddressBar
-  nameWithType: showState.AddressBar
-  fullName: CRMScript.NetServer.showState.AddressBar
+  name: ShowState.AddressBar
+  nameWithType: ShowState.AddressBar
+  fullName: CRMScript.NetServer.ShowState.AddressBar
   type: Field
-  summary: "\n512: AddressBar\n"
+  summary: "\n512: Show the Browser addressbar (where the user can type URL&apos;s and stuff)\n"
   syntax: 
     content: AddressBar = 512
-    type: CRMScript.NetServer.showState
-- uid: CRMScript.NetServer.showState.StatusBar
-  commentId: F:CRMScript.NetServer.showState.StatusBar
-  id: showState.StatusBar
+    type: CRMScript.NetServer.ShowState
+- uid: CRMScript.NetServer.ShowState.StatusBar
+  commentId: F:CRMScript.NetServer.ShowState.StatusBar
+  id: ShowState.StatusBar
   langs:
   - crmscript
-  name: showState.StatusBar
-  nameWithType: showState.StatusBar
-  fullName: CRMScript.NetServer.showState.StatusBar
+  name: ShowState.StatusBar
+  nameWithType: ShowState.StatusBar
+  fullName: CRMScript.NetServer.ShowState.StatusBar
   type: Field
-  summary: "\n1024: StatusBar\n"
+  summary: "\n1024: Show the Browser statusbar\n"
   syntax: 
     content: StatusBar = 1024
-    type: CRMScript.NetServer.showState
-- uid: CRMScript.NetServer.showState.MenuBar
-  commentId: F:CRMScript.NetServer.showState.MenuBar
-  id: showState.MenuBar
+    type: CRMScript.NetServer.ShowState
+- uid: CRMScript.NetServer.ShowState.MenuBar
+  commentId: F:CRMScript.NetServer.ShowState.MenuBar
+  id: ShowState.MenuBar
   langs:
   - crmscript
-  name: showState.MenuBar
-  nameWithType: showState.MenuBar
-  fullName: CRMScript.NetServer.showState.MenuBar
+  name: ShowState.MenuBar
+  nameWithType: ShowState.MenuBar
+  fullName: CRMScript.NetServer.ShowState.MenuBar
   type: Field
   summary: "\n2048: MenuBar\n"
   syntax: 
     content: MenuBar = 2048
-    type: CRMScript.NetServer.showState
+    type: CRMScript.NetServer.ShowState
 references:
-- uid: CRMScript.NetServer.showState
-  commentId: T:CRMScript.NetServer.showState
+- uid: CRMScript.NetServer.ShowState
+  commentId: T:CRMScript.NetServer.ShowState
   isExternal: true
-  name: showState
-  nameWithType: showState
-  fullName: CRMScript.NetServer.showState
+  name: ShowState
+  nameWithType: ShowState
+  fullName: CRMScript.NetServer.ShowState
