--- a/docs/api-reference/CRMScript.NetServer.yml
+++ b/docs/api-reference/CRMScript.NetServer.yml
@@ -52,8 +52,8 @@ items:
   - CRMScript.NetServer.entity
   - CRMScript.NetServer.entityId
   - CRMScript.NetServer.erpActorType
-  - CRMScript.NetServer.eventHandlerType
-  - CRMScript.NetServer.executeOnEvent
+  - CRMScript.NetServer.EventHandlerType
+  - CRMScript.NetServer.ExecuteOnEvent
   - CRMScript.NetServer.expires
   - CRMScript.NetServer.externalUserInfoModification
   - CRMScript.NetServer.fieldKeys
@@ -75,6 +75,7 @@ items:
   - CRMScript.NetServer.msgClosingStatus
   - CRMScript.NetServer.multiWordOperator
   - CRMScript.NetServer.name
+  - CRMScript.NetServer.Navigation
   - CRMScript.NetServer.NSAccessGatewayInfo
   - CRMScript.NetServer.NSActivityFilter
   - CRMScript.NetServer.NSActivityInformationListItem
@@ -527,7 +528,7 @@ items:
   - CRMScript.NetServer.selectionUnionType
   - CRMScript.NetServer.senderEmailMode
   - CRMScript.NetServer.serverType
-  - CRMScript.NetServer.showState
+  - CRMScript.NetServer.ShowState
   - CRMScript.NetServer.singleWordOperator
   - CRMScript.NetServer.slevel
   - CRMScript.NetServer.source
@@ -548,7 +549,6 @@ items:
   - CRMScript.NetServer.userValueOverride
   - CRMScript.NetServer.valueType
   - CRMScript.NetServer.visibility
-  - CRMScript.NetServer.visibleIn
   - CRMScript.NetServer.WidgetRequiredFields
   - CRMScript.NetServer.WidgetTheme
   name: CRMScript.NetServer
@@ -1240,12 +1240,12 @@ references:
   name: NSCustomerServiceAgent
   nameWithType: NSCustomerServiceAgent
   fullName: CRMScript.NetServer.NSCustomerServiceAgent
-- uid: CRMScript.NetServer.eventHandlerType
-  commentId: T:CRMScript.NetServer.eventHandlerType
+- uid: CRMScript.NetServer.EventHandlerType
+  commentId: T:CRMScript.NetServer.EventHandlerType
   isExternal: true
-  name: eventHandlerType
-  nameWithType: eventHandlerType
-  fullName: CRMScript.NetServer.eventHandlerType
+  name: EventHandlerType
+  nameWithType: EventHandlerType
+  fullName: CRMScript.NetServer.EventHandlerType
 - uid: CRMScript.NetServer.NSCustomerServiceStartup
   commentId: T:CRMScript.NetServer.NSCustomerServiceStartup
   isExternal: true
@@ -1474,24 +1474,24 @@ references:
   name: NSExtAppEntity
   nameWithType: NSExtAppEntity
   fullName: CRMScript.NetServer.NSExtAppEntity
-- uid: CRMScript.NetServer.executeOnEvent
-  commentId: T:CRMScript.NetServer.executeOnEvent
+- uid: CRMScript.NetServer.ExecuteOnEvent
+  commentId: T:CRMScript.NetServer.ExecuteOnEvent
   isExternal: true
-  name: executeOnEvent
-  nameWithType: executeOnEvent
-  fullName: CRMScript.NetServer.executeOnEvent
-- uid: CRMScript.NetServer.showState
-  commentId: T:CRMScript.NetServer.showState
+  name: ExecuteOnEvent
+  nameWithType: ExecuteOnEvent
+  fullName: CRMScript.NetServer.ExecuteOnEvent
+- uid: CRMScript.NetServer.ShowState
+  commentId: T:CRMScript.NetServer.ShowState
   isExternal: true
-  name: showState
-  nameWithType: showState
-  fullName: CRMScript.NetServer.showState
-- uid: CRMScript.NetServer.visibleIn
-  commentId: T:CRMScript.NetServer.visibleIn
+  name: ShowState
+  nameWithType: ShowState
+  fullName: CRMScript.NetServer.ShowState
+- uid: CRMScript.NetServer.Navigation
+  commentId: T:CRMScript.NetServer.Navigation
   isExternal: true
-  name: visibleIn
-  nameWithType: visibleIn
-  fullName: CRMScript.NetServer.visibleIn
+  name: Navigation
+  nameWithType: Navigation
+  fullName: CRMScript.NetServer.Navigation
 - uid: CRMScript.NetServer.NSExtendedLicenseInfo
   commentId: T:CRMScript.NetServer.NSExtendedLicenseInfo
   isExternal: true
