--- a/docs/api-reference/toc.yml
+++ b/docs/api-reference/toc.yml
@@ -1070,10 +1070,10 @@ items:
       href: CRMScript.NetServer.entityId.yml
     - name: Enum erpActorType
       href: CRMScript.NetServer.erpActorType.yml
-    - name: Enum eventHandlerType
-      href: CRMScript.NetServer.eventHandlerType.yml
-    - name: Enum executeOnEvent
-      href: CRMScript.NetServer.executeOnEvent.yml
+    - name: EventHandlerType
+      href: CRMScript.NetServer.EventHandlerType.yml
+    - name: ExecuteOnEvent
+      href: CRMScript.NetServer.ExecuteOnEvent.yml
     - name: Enum expires
       href: CRMScript.NetServer.expires.yml
     - name: Enum externalUserInfoModification
@@ -1116,6 +1116,8 @@ items:
       href: CRMScript.NetServer.multiWordOperator.yml
     - name: Enum name
       href: CRMScript.NetServer.name.yml
+    - name: Navigation
+      href: CRMScript.NetServer.Navigation.yml
     - name: Enum operation
       href: CRMScript.NetServer.operation.yml
     - name: OrderBySortType
@@ -1184,8 +1186,8 @@ items:
       href: CRMScript.NetServer.senderEmailMode.yml
     - name: Enum serverType
       href: CRMScript.NetServer.serverType.yml
-    - name: Enum showState
-      href: CRMScript.NetServer.showState.yml
+    - name: ShowState
+      href: CRMScript.NetServer.ShowState.yml
     - name: Enum singleWordOperator
       href: CRMScript.NetServer.singleWordOperator.yml
     - name: Enum slevel
@@ -1226,8 +1228,6 @@ items:
       href: CRMScript.NetServer.valueType.yml
     - name: Enum visibility
       href: CRMScript.NetServer.visibility.yml
-    - name: Enum visibleIn
-      href: CRMScript.NetServer.visibleIn.yml
     - name: WidgetRequiredFields
       href: CRMScript.NetServer.WidgetRequiredFields.yml
     - name: WidgetTheme
