--- a/docs/api-reference/CRMScript.Native.Attachment.yml
+++ b/docs/api-reference/CRMScript.Native.Attachment.yml
@@ -204,6 +204,8 @@ items:
   syntax: 
     content: remove()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.Native.Attachment.save()
   commentId: M:CRMScript.Native.Attachment.save()
