--- a/docs/api-reference/CRMScript.NetServer.NSEMailConnectionInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSEMailConnectionInfo.yml
@@ -6,12 +6,12 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSEMailConnectionInfo.#ctor
   - CRMScript.NetServer.NSEMailConnectionInfo.GetFolder()
   - CRMScript.NetServer.NSEMailConnectionInfo.GetPassword()
   - CRMScript.NetServer.NSEMailConnectionInfo.GetServerName()
   - CRMScript.NetServer.NSEMailConnectionInfo.GetUserName()
   - CRMScript.NetServer.NSEMailConnectionInfo.GetUseSSL()
-  - CRMScript.NetServer.NSEMailConnectionInfo.#ctor
   - CRMScript.NetServer.NSEMailConnectionInfo.SetFolder(String)
   - CRMScript.NetServer.NSEMailConnectionInfo.SetPassword(String)
   - CRMScript.NetServer.NSEMailConnectionInfo.SetServerName(String)
@@ -23,101 +23,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSEMailConnectionInfo.GetFolder()
-  commentId: M:CRMScript.NetServer.NSEMailConnectionInfo.GetFolder()
-  id: 'GetFolder()'
-  so.intellisense: NSEMailConnectionInfo.GetFolder
-  langs:
-  - crmscript
-  name: 'GetFolder()'
-  nameWithType: NSEMailConnectionInfo.GetFolder()
-  fullName: CRMScript.NetServer.NSEMailConnectionInfo.GetFolder()
-  type: Method
-  summary: "\nOptional folder to set as current after logging in\n"
-  remarks: 
-  syntax: 
-    content: String GetFolder()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSEMailConnectionInfo thing;\nString folder = thing.GetFolder();</code></pre>\n"
-- uid: CRMScript.NetServer.NSEMailConnectionInfo.GetPassword()
-  commentId: M:CRMScript.NetServer.NSEMailConnectionInfo.GetPassword()
-  id: 'GetPassword()'
-  so.intellisense: NSEMailConnectionInfo.GetPassword
-  langs:
-  - crmscript
-  name: 'GetPassword()'
-  nameWithType: NSEMailConnectionInfo.GetPassword()
-  fullName: CRMScript.NetServer.NSEMailConnectionInfo.GetPassword()
-  type: Method
-  summary: "\nPassword for the username\n"
-  remarks: 
-  syntax: 
-    content: String GetPassword()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSEMailConnectionInfo thing;\nString password = thing.GetPassword();</code></pre>\n"
-- uid: CRMScript.NetServer.NSEMailConnectionInfo.GetServerName()
-  commentId: M:CRMScript.NetServer.NSEMailConnectionInfo.GetServerName()
-  id: 'GetServerName()'
-  so.intellisense: NSEMailConnectionInfo.GetServerName
-  langs:
-  - crmscript
-  name: 'GetServerName()'
-  nameWithType: NSEMailConnectionInfo.GetServerName()
-  fullName: CRMScript.NetServer.NSEMailConnectionInfo.GetServerName()
-  type: Method
-  summary: "\nHostname or ip to server to connect to. Custom ports may be specified by adding ':' and the port number after the name/ip. Ex: '127.0.0.1:6543'\n"
-  remarks: 
-  syntax: 
-    content: String GetServerName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSEMailConnectionInfo thing;\nString serverName = thing.GetServerName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSEMailConnectionInfo.GetUserName()
-  commentId: M:CRMScript.NetServer.NSEMailConnectionInfo.GetUserName()
-  id: 'GetUserName()'
-  so.intellisense: NSEMailConnectionInfo.GetUserName
-  langs:
-  - crmscript
-  name: 'GetUserName()'
-  nameWithType: NSEMailConnectionInfo.GetUserName()
-  fullName: CRMScript.NetServer.NSEMailConnectionInfo.GetUserName()
-  type: Method
-  summary: "\nName of user to log in with\n"
-  remarks: 
-  syntax: 
-    content: String GetUserName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSEMailConnectionInfo thing;\nString userName = thing.GetUserName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSEMailConnectionInfo.GetUseSSL()
-  commentId: M:CRMScript.NetServer.NSEMailConnectionInfo.GetUseSSL()
-  id: 'GetUseSSL()'
-  so.intellisense: NSEMailConnectionInfo.GetUseSSL
-  langs:
-  - crmscript
-  name: 'GetUseSSL()'
-  nameWithType: NSEMailConnectionInfo.GetUseSSL()
-  fullName: CRMScript.NetServer.NSEMailConnectionInfo.GetUseSSL()
-  type: Method
-  summary: "\nUse a secure connection with the server\n"
-  remarks: 
-  syntax: 
-    content: Bool GetUseSSL()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSEMailConnectionInfo thing;\nBool useSSL = thing.GetUseSSL();</code></pre>\n"
 - uid: CRMScript.NetServer.NSEMailConnectionInfo.#ctor
   commentId: M:CRMScript.NetServer.NSEMailConnectionInfo.#ctor
   id: '#ctor'
@@ -133,6 +38,106 @@ items:
   syntax: 
     content: NSEMailConnectionInfo
   example: 
+- uid: CRMScript.NetServer.NSEMailConnectionInfo.GetFolder()
+  commentId: M:CRMScript.NetServer.NSEMailConnectionInfo.GetFolder()
+  id: 'GetFolder()'
+  so.intellisense: NSEMailConnectionInfo.GetFolder
+  langs:
+  - crmscript
+  name: 'GetFolder()'
+  nameWithType: NSEMailConnectionInfo.GetFolder()
+  fullName: CRMScript.NetServer.NSEMailConnectionInfo.GetFolder()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetFolder()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Optional folder to set as current after logging in
+  example: 
+  - "\n<pre><code>NSEMailConnectionInfo thing;\nString folder = thing.GetFolder();</code></pre>\n"
+- uid: CRMScript.NetServer.NSEMailConnectionInfo.GetPassword()
+  commentId: M:CRMScript.NetServer.NSEMailConnectionInfo.GetPassword()
+  id: 'GetPassword()'
+  so.intellisense: NSEMailConnectionInfo.GetPassword
+  langs:
+  - crmscript
+  name: 'GetPassword()'
+  nameWithType: NSEMailConnectionInfo.GetPassword()
+  fullName: CRMScript.NetServer.NSEMailConnectionInfo.GetPassword()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetPassword()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Password for the username
+  example: 
+  - "\n<pre><code>NSEMailConnectionInfo thing;\nString password = thing.GetPassword();</code></pre>\n"
+- uid: CRMScript.NetServer.NSEMailConnectionInfo.GetServerName()
+  commentId: M:CRMScript.NetServer.NSEMailConnectionInfo.GetServerName()
+  id: 'GetServerName()'
+  so.intellisense: NSEMailConnectionInfo.GetServerName
+  langs:
+  - crmscript
+  name: 'GetServerName()'
+  nameWithType: NSEMailConnectionInfo.GetServerName()
+  fullName: CRMScript.NetServer.NSEMailConnectionInfo.GetServerName()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetServerName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Hostname or IP to server to connect to. Custom ports may be specified by adding ':' and the port number after the name/ip. For example, '127.0.0.1:6543'
+  example: 
+  - "\n<pre><code>NSEMailConnectionInfo thing;\nString serverName = thing.GetServerName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSEMailConnectionInfo.GetUserName()
+  commentId: M:CRMScript.NetServer.NSEMailConnectionInfo.GetUserName()
+  id: 'GetUserName()'
+  so.intellisense: NSEMailConnectionInfo.GetUserName
+  langs:
+  - crmscript
+  name: 'GetUserName()'
+  nameWithType: NSEMailConnectionInfo.GetUserName()
+  fullName: CRMScript.NetServer.NSEMailConnectionInfo.GetUserName()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetUserName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Name of user to log in with
+  example: 
+  - "\n<pre><code>NSEMailConnectionInfo thing;\nString userName = thing.GetUserName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSEMailConnectionInfo.GetUseSSL()
+  commentId: M:CRMScript.NetServer.NSEMailConnectionInfo.GetUseSSL()
+  id: 'GetUseSSL()'
+  so.intellisense: NSEMailConnectionInfo.GetUseSSL
+  langs:
+  - crmscript
+  name: 'GetUseSSL()'
+  nameWithType: NSEMailConnectionInfo.GetUseSSL()
+  fullName: CRMScript.NetServer.NSEMailConnectionInfo.GetUseSSL()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Bool GetUseSSL()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Use a secure connection with the server
+  example: 
+  - "\n<pre><code>NSEMailConnectionInfo thing;\nBool useSSL = thing.GetUseSSL();</code></pre>\n"
 - uid: CRMScript.NetServer.NSEMailConnectionInfo.SetFolder(String)
   commentId: M:CRMScript.NetServer.NSEMailConnectionInfo.SetFolder(String)
   id: 'SetFolder(String)'
@@ -143,16 +148,17 @@ items:
   nameWithType: NSEMailConnectionInfo.SetFolder(String)
   fullName: CRMScript.NetServer.NSEMailConnectionInfo.SetFolder(String)
   type: Method
-  summary: "\nOptional folder to set as current after logging in\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetFolder(String folder)
     parameters:
     - id: folder
       type: CRMScript.Global.String
-      description: 
+      description: Optional folder to set as current after logging in
     return:
       type: CRMScript.Global.Void
+      description: 
   example: 
   - "\n<pre><code>NSEMailConnectionInfo thing;\nString folder;\nthing.SetFolder(folder);</code></pre>\n"
 - uid: CRMScript.NetServer.NSEMailConnectionInfo.SetPassword(String)
@@ -165,14 +171,14 @@ items:
   nameWithType: NSEMailConnectionInfo.SetPassword(String)
   fullName: CRMScript.NetServer.NSEMailConnectionInfo.SetPassword(String)
   type: Method
-  summary: "\nPassword for the username\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetPassword(String password)
     parameters:
     - id: password
       type: CRMScript.Global.String
-      description: 
+      description: Password for the username
     return:
       type: CRMScript.Global.Void
   example: 
@@ -187,14 +193,14 @@ items:
   nameWithType: NSEMailConnectionInfo.SetServerName(String)
   fullName: CRMScript.NetServer.NSEMailConnectionInfo.SetServerName(String)
   type: Method
-  summary: "\nHostname or ip to server to connect to. Custom ports may be specified by adding ':' and the port number after the name/ip. Ex: '127.0.0.1:6543'\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetServerName(String serverName)
     parameters:
     - id: serverName
       type: CRMScript.Global.String
-      description: 
+      description: Hostname or IP to server to connect to. Custom ports may be specified by adding ':' and the port number after the name/ip. For example, '127.0.0.1:6543'
     return:
       type: CRMScript.Global.Void
   example: 
@@ -209,14 +215,14 @@ items:
   nameWithType: NSEMailConnectionInfo.SetUserName(String)
   fullName: CRMScript.NetServer.NSEMailConnectionInfo.SetUserName(String)
   type: Method
-  summary: "\nName of user to log in with\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetUserName(String userName)
     parameters:
     - id: userName
       type: CRMScript.Global.String
-      description: 
+      description: Name of user to log in with
     return:
       type: CRMScript.Global.Void
   example: 
@@ -231,14 +237,14 @@ items:
   nameWithType: NSEMailConnectionInfo.SetUseSSL(Bool)
   fullName: CRMScript.NetServer.NSEMailConnectionInfo.SetUseSSL(Bool)
   type: Method
-  summary: "\nUse a secure connection with the server\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetUseSSL(Bool useSSL)
     parameters:
     - id: useSSL
       type: CRMScript.Global.Bool
-      description: 
+      description: Use a secure connection with the server?
     return:
       type: CRMScript.Global.Void
   example: 
