--- a/docs/api-reference/CRMScript.NetServer.NSProjectEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProjectEntity.yml
@@ -946,6 +946,8 @@ items:
   syntax: 
     content: Void SetIsPublished()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSProjectEntity.SetLinks(NSLink[])
   commentId: M:CRMScript.NetServer.NSProjectEntity.SetLinks(NSLink[])
