--- a/docs/api-reference/CRMScript.NetServer.NSReportAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReportAgent.yml
@@ -311,6 +311,8 @@ items:
   syntax: 
     content: SaveReportLabelLayoutEntity()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSReport  agent;\nNSReportLabelLayoutEntity thing = agent.CreateDefaultReportLabelLayoutEntity();\nthing = agent.SaveReportLabelLayoutEntity(thing);</code></pre>\n"
 - uid: CRMScript.NetServer.NSReportAgent.UpdateFavorite(NSReportEntity)
