--- a/docs/api-reference/CRMScript.NetServer.NSSelectionMemberEditValues.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSelectionMemberEditValues.yml
@@ -72,6 +72,8 @@ items:
   syntax: 
     content: GetChangeCompanyBusiness()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.GetChangeCompanyCategory()
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.GetChangeCompanyCategory()
@@ -88,6 +90,8 @@ items:
   syntax: 
     content: GetChangeCompanyCategory()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.GetChangeCompanyCode()
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.GetChangeCompanyCode()
@@ -104,6 +108,8 @@ items:
   syntax: 
     content: GetChangeCompanyCode()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.GetChangeCompanyCountry()
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.GetChangeCompanyCountry()
@@ -120,6 +126,8 @@ items:
   syntax: 
     content: GetChangeCompanyCountry()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.GetChangeCompanyDepartment()
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.GetChangeCompanyDepartment()
@@ -136,6 +144,8 @@ items:
   syntax: 
     content: GetChangeCompanyDepartment()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.GetChangeCompanyName()
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.GetChangeCompanyName()
@@ -152,6 +162,8 @@ items:
   syntax: 
     content: GetChangeCompanyName()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.GetChangeCompanyNumber()
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.GetChangeCompanyNumber()
@@ -168,6 +180,8 @@ items:
   syntax: 
     content: GetChangeCompanyNumber()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.GetChangeCompanyOrgNr()
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.GetChangeCompanyOrgNr()
@@ -184,6 +198,8 @@ items:
   syntax: 
     content: GetChangeCompanyOrgNr()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.GetChangeCompanyOurContact()
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.GetChangeCompanyOurContact()
@@ -200,6 +216,8 @@ items:
   syntax: 
     content: GetChangeCompanyOurContact()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.GetChangeContactJobTitle()
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.GetChangeContactJobTitle()
@@ -216,6 +234,8 @@ items:
   syntax: 
     content: GetChangeContactJobTitle()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.GetChangeContactPosition()
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.GetChangeContactPosition()
@@ -232,6 +252,8 @@ items:
   syntax: 
     content: GetChangeContactPosition()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.GetCompanyBusiness()
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.GetCompanyBusiness()
@@ -248,6 +270,8 @@ items:
   syntax: 
     content: GetCompanyBusiness()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.GetCompanyCategory()
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.GetCompanyCategory()
@@ -264,6 +288,8 @@ items:
   syntax: 
     content: GetCompanyCategory()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.GetCompanyCode()
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.GetCompanyCode()
@@ -280,6 +306,8 @@ items:
   syntax: 
     content: GetCompanyCode()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.GetCompanyCountry()
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.GetCompanyCountry()
@@ -296,6 +324,8 @@ items:
   syntax: 
     content: GetCompanyCountry()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.GetCompanyDepartment()
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.GetCompanyDepartment()
@@ -312,6 +342,8 @@ items:
   syntax: 
     content: GetCompanyDepartment()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.GetCompanyName()
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.GetCompanyName()
@@ -328,6 +360,8 @@ items:
   syntax: 
     content: GetCompanyName()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.GetCompanyNumber()
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.GetCompanyNumber()
@@ -344,6 +378,8 @@ items:
   syntax: 
     content: GetCompanyNumber()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.GetCompanyOrgNr()
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.GetCompanyOrgNr()
@@ -360,6 +396,8 @@ items:
   syntax: 
     content: GetCompanyOrgNr()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.GetCompanyOurContact()
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.GetCompanyOurContact()
@@ -376,6 +414,8 @@ items:
   syntax: 
     content: GetCompanyOurContact()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.GetContactJobTitle()
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.GetContactJobTitle()
@@ -392,6 +432,8 @@ items:
   syntax: 
     content: GetContactJobTitle()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.GetContactPosition()
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.GetContactPosition()
@@ -408,6 +450,8 @@ items:
   syntax: 
     content: GetContactPosition()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSSelectionMemberEditValues.#ctor
   commentId: M:CRMScript.NetServer.NSSelectionMemberEditValues.#ctor
