--- a/docs/api-reference/CRMScript.NetServer.NSStream.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSStream.yml
@@ -30,6 +30,8 @@ items:
   syntax: 
     content: GetStream()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSStream.#ctor
   commentId: M:CRMScript.NetServer.NSStream.#ctor
