--- a/docs/api-reference/CRMScript.NetServer.NSTableRight.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTableRight.yml
@@ -34,6 +34,8 @@ items:
   syntax: 
     content: GetMask()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSTableRight.GetReason()
   commentId: M:CRMScript.NetServer.NSTableRight.GetReason()
@@ -50,6 +52,8 @@ items:
   syntax: 
     content: GetReason()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSTableRight.GetTableRight()
   commentId: M:CRMScript.NetServer.NSTableRight.GetTableRight()
@@ -66,6 +70,8 @@ items:
   syntax: 
     content: GetTableRight()
     parameters: []
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSTableRight.#ctor
   commentId: M:CRMScript.NetServer.NSTableRight.#ctor
